<resources>
    <string name="app_name">ToDoApp</string>
    <string name="MyTodo">Мои дела</string>
    <string name="save">Сохранить</string>
    <string name="Delete">Удалить</string>
    <string name="importance_high">"  Высокий"</string>
    <string name="importance_none">Нет</string>
    <string name="importance_low">Низкий</string>
    <string name="importance_title">Важность</string>
    <string name="edit_todo_hint">Напиши что-нибудь</string>
    <string name="deadline_title">Сделать до</string>
    <string name="empty_todo_edit_error_message">Ты не можешь сохранить пустое поле</string>
    <string name="is_done_count">Выполнено - %d</string>
    <string name="newTodo">Новое</string>
    <string name="authorization_text">Что-бы продолжить нужно авторизоваться</string>
    <string name="authorization_description">Войти с Яндекс ID</string>
    <string name="no_internet_message">Нет интернета</string>
    <string name="something_gone_wrong_message">Что-то пошло не так</string>
    <string name="settings">Настройки</string>
    <string name="title_theme">Тема</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="theme_system">Как в системе</string>
    <string name="theme_dark">Всегда тёмная</string>
    <string name="theme_light">Всегда светлая</string>
    <string name="deadline_soon">скоро дедлайн</string>
    <string name="deadline_soon_low">скоро дедлайн не слишком важной задачи</string>
    <string name="deadline_soon_high">скоро дедлайн важной задачи</string>

</resources>