<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_primary"
        app:navigationIcon="@drawable/ic_close"
        app:navigationIconTint="@color/label_primary"
        app:title="@string/settings"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/title_theme"
        android:textAppearance="@style/Body" />

    <TextView
        android:id="@+id/textViewCurrentTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:text="@string/theme_system"
        android:textAppearance="@style/Body" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:text="Уведомлять о дедлайне в"
        android:textAppearance="@style/Body"
        android:textColor="@color/label_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewDeadlineNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingVertical="14dp"
            android:paddingStart="16dp"
            android:text="00:00"
            android:textAppearance="@style/Body"
            android:textColor="@color/label_primary" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchIsEnabledDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:thumbTint="@color/selector_switch_thumb"
            app:trackTint="@color/selector_switch_track" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="?selectableItemBackground"
        android:drawableLeft="@drawable/ic_logout"
        android:drawablePadding="8dp"
        android:drawableTint="@color/label_primary"
        android:paddingVertical="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/logout"
        android:textAppearance="@style/Body" />

</LinearLayout>