<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="noScroll"
            app:titleEnabled="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/back_primary"
                app:menu="@menu/menu_edit"
                app:navigationIcon="@drawable/ic_close"
                app:navigationIconTint="@color/label_primary"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_8dp"
                android:gravity="top"
                android:hint="@string/edit_todo_hint"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:minHeight="104dp"
                android:padding="16dp"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewImportance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/importance_title"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:minWidth="164dp"
                android:paddingVertical="4dp"
                app:layout_constraintLeft_toLeftOf="@+id/textViewImportance"
                app:layout_constraintTop_toBottomOf="@+id/textViewImportance" />

            <View
                android:id="@+id/materialDividerImportance"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="16dp"
                android:background="@color/support_separator"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <TextView
                android:id="@+id/textViewDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deadline_title"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="@+id/materialDividerImportance"
                app:layout_constraintTop_toBottomOf="@+id/materialDividerImportance" />

            <TextView
                android:id="@+id/textViewDeadlineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Subhead"
                android:textColor="@color/blue"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/textViewDeadline"
                app:layout_constraintTop_toBottomOf="@+id/textViewDeadline"
                tools:text="10.10.20" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDividerImportance"
                app:thumbTint="@color/selector_switch_thumb"
                app:trackTint="@color/selector_switch_track" />

            <View
                android:id="@+id/materialDividerDeadline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="50dp"
                android:background="@color/support_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCompat" />

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="12dp"
                android:text="@string/Delete"
                android:textAppearance="@style/Body"
                android:textColor="@color/selector_delete_button"
                app:drawableLeftCompat="@drawable/ic_delete"
                app:drawableTint="@color/selector_delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDividerDeadline"
                tools:enabled="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>